Fix avatars flex alignment

--- a/scss/_avatars.scss
+++ b/scss/_avatars.scss
@@ -7,7 +7,6 @@
     border: 1px solid white;
     border-radius: 50px;
     transition: margin 0.1s ease-in-out;
-    cursor: pointer;
   }
 
   &:hover .avatar {
