--- a/scss/about.scss
+++ b/scss/about.scss
@@ -17,7 +17,6 @@ h2 {
 p,
 #facts {
   font-size: 1.3em;
-  margin-bottom: 1rem;
 }
 
 body {
@@ -38,7 +37,7 @@ main {
   font-size: 1.2rem;
   display: flex;
   justify-content: center;
-  align-items: baseline;
+  align-items: center;
   position: sticky;
   width: 100%;
   background: #262626;
